tests/cli/snapshots/main__cli__add__add_an_existing_contribution_should_do_nothing-2.snap
---
source: tests/cli/add.rs
expression: updated_config_file
---
{
  "projectName": "surrealdb-migrations",
  "projectOwner": "Odonno",
  "repoType": "github",
  "repoHost": "https://github.com",
  "files": [
    "readme.md"
  ],
  "imageSize": 100,
  "commit": false,
  "commitConvention": "gitmoji",
  "contributorsPerLine": 7,
  "skipCi": true,
  "contributors": [
    {
      "login": "tekacs",
      "name": "Amar Sood",
      "avatar_url": "https://avatars.githubusercontent.com/u/63247?v=4",
      "profile": "http://www.tekacs.com/",
      "contributions": [
        "code"
      ]
    },
    {
      "login": "Roms1383",
      "name": "Rom's",
      "avatar_url": "https://avatars.githubusercontent.com/u/21016014?v=4",
      "profile": "https://github.com/Roms1383",
      "contributions": [
        "code",
        "ideas",
        "infra"
      ]
    },
    {
      "login": "pranaypratyush",
      "name": "Pranay Pratyush",
      "avatar_url": "https://avatars.githubusercontent.com/u/10587083?v=4",
      "profile": "https://github.com/pranaypratyush",
      "contributions": [
        "bug"
      ]
    },
    {
      "login": "ansarizafar",
      "name": "Zafar Ansari",
      "avatar_url": "https://avatars.githubusercontent.com/u/5788284?v=4",
      "profile": "https://github.com/ansarizafar",
      "contributions": [
        "ideas"
      ]
    },
    {
      "login": "turulix",
      "name": "Tim",
      "avatar_url": "https://avatars.githubusercontent.com/u/28957605?v=4",
      "profile": "https://turulix.de/",
      "contributions": [
        "ideas"
      ]
    },
    {
      "login": "snarkipus",
      "name": "Matt Jackson",
      "avatar_url": "https://avatars.githubusercontent.com/u/3688989?v=4",
      "profile": "https://github.com/snarkipus",
      "contributions": [
        "bug"
      ]
    },
    {
      "login": "keyruu",
      "name": "Lucas",
      "avatar_url": "https://avatars.githubusercontent.com/u/53177682?v=4",
      "profile": "https://github.com/keyruu",
      "contributions": [
        "ideas"
      ]
    }
  ]
}
