tests/cli/snapshots/main__cli__add__fails_to_add_if_no_config_file.snap
---
source: tests/cli/add.rs
expression: stderr
---
Error: 
   0: The configuration file '.all-contributorsrc' does not exist

[location]

Backtrace omitted. Run with RUST_BACKTRACE=1 environment variable to display it.
Run with RUST_BACKTRACE=full to include source snippets.
